<resources>
    <string name="app_name">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="message_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="share_app_message">Я учусь здесь: https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="author_email">artemkashityn193@gmail.com</string>
    <string name="email_support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="search_empty_result">Ничего не нашлось</string>
    <string name="error_no_internet">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="placeholder_progress_playing">00:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="release_year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_library_favourites_empty">Ваша медиатека пуста</string>
    <string name="media_library_playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="media_library_playlists_create">Новый плейлист</string>
    <string name="media_library_tab_favourites">Избранные треки</string>
    <string name="media_library_tab_playlists">Плейлисты</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="playlist_name_requirement">Название*</string>
    <string name="param_track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="param_track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="param_playlist_created">Плейлист %1$s создан</string>
    <string name="player_sheet_title">Добавить в плейлист</string>
    <string name="playlist_creation">Новый плейлист</string>
    <string name="share_playlist_empty_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="update_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="playlist_remove_track_dialog_title">Хотите удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="playlist_remove_dialog_title">Удалить плейлист</string>
    <string name="playlist_remove_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="playlist_empty_tracks">В этом плейлисте нет треков</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="playlist_sheet_edit_info">Редактировать информацию</string>
    <plurals name="plural_track_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="plural_minute_count">
        <item quantity="zero">%1$s минут</item>
        <item quantity="one">%1$s минута</item>
        <item quantity="two">%1$s минуты</item>
        <item quantity="few">%1$s минуты</item>
        <item quantity="many">%1$s минут</item>
        <item quantity="other">%1$s минут</item>
    </plurals>
</resources>