<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/header_outer_indent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/header_inner_indent"
            android:clickable="true"
            android:src="@drawable/ic_arrow_back_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/header_inner_top_indent"
            android:paddingBottom="@dimen/header_inner_indent"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/main_text_size" />
    </FrameLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_space"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/settings_indent_start"
        android:paddingTop="@dimen/settings_switch_indent"
        android:paddingEnd="@dimen/settings_switch_indent_end"
        android:paddingBottom="@dimen/settings_switch_indent"
        android:text="@string/black_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:thumbIconSize="18dp"
        app:thumbTint="@color/text_gray"
        app:trackTint="@color/light_gray" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/settings_indent_start"
        android:paddingTop="@dimen/settings_icon_text_indent_top"
        android:paddingEnd="@dimen/settings_icon_text_indent_end"
        android:paddingBottom="@dimen/settings_icon_text_indent_bottom"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableRightCompat="@drawable/ic_share_24"
        app:drawableTint="@color/text_gray" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/settings_indent_start"
        android:paddingTop="@dimen/settings_icon_text_indent_top"
        android:paddingEnd="@dimen/settings_icon_text_indent_end"
        android:paddingBottom="@dimen/settings_icon_text_indent_bottom"
        android:text="@string/message_to_support"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/ic_support_24"
        app:drawableTint="@color/text_gray" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/settings_indent_start"
        android:paddingTop="@dimen/settings_icon_text_indent_top"
        android:paddingEnd="@dimen/settings_icon_text_indent_end"
        android:paddingBottom="@dimen/settings_icon_text_indent_bottom"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"
        app:drawableTint="@color/text_gray" />

</LinearLayout>