<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <FrameLayout style="@style/HeaderFrameLayout">

        <ImageView
            android:id="@+id/back"
            style="@style/HeaderBackImageView" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/HeaderTextView"
            android:text="@string/search" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="?attr/colorSecondary">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="@dimen/icon_content_padding"
            android:drawableTint="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="28dp"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="?attr/colorOnSecondary"
            android:textCursorDrawable="@color/blue"
            android:textFontWeight="400"
            android:textSize="@dimen/regular_text_size" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="@dimen/icon_small_size"
            android:layout_height="@dimen/icon_small_size"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:tint="?attr/colorOnSecondary" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="gone" />

    <FrameLayout
        android:id="@+id/search_empty"
        style="@style/SearchErrorFrameLayout"
        tools:visibility="gone">

        <ImageView style="@style/DayNightSearchEmptyImageView" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/SearchErrorTextView"
            android:maxLines="1"
            android:text="@string/search_empty_result" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/no_internet"
        style="@style/SearchErrorFrameLayout">

        <ImageView style="@style/DayNightSearchNoInternetImageView" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/SearchErrorTextView"
            android:maxLines="4"
            android:text="@string/error_no_internet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refresh"
            style="@style/SearchRefreshButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="250dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:padding="@dimen/search_refresh_padding"
            android:text="@string/refresh"
            android:textColor="?attr/colorPrimary"
            app:cornerRadius="54dp" />
    </FrameLayout>
</LinearLayout>